--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "classnames": "^2.3.1",
+    "framer-motion": "^6.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
